# OpenEnv-Data-Cleaning-Pipeline

./: .gitignore  Dockerfile  README.md  baseline.py  client.py  code_sandbox copy.py  dataset_generator.py  environment.py  graders.py  inference.py  llm_judge.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  training_demo.ipynb  web_ui.py
server/: Dockerfile  app.py
