[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:BuildBackend"

[project]
name = "data-cleaning-env"
version = "1.0.0"
description = "OpenEnv Data Cleaning Pipeline"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "websockets==13.0",
    "pydantic==2.8.2",
    "pandas==2.2.2",
    "numpy==1.26.4",
    "requests==2.32.3",
    "openai==1.40.0",
    "pyyaml==6.0.2",
]