[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:BuildBackend"

[project]
name = "data-cleaning-env"
version = "1.0.0"
description = "OpenEnv Data Cleaning Pipeline — RL environment for dataset cleaning tasks"
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "websockets>=15.0.1",
    "pydantic==2.8.2",
    "pandas==2.2.2",
    "numpy==1.26.4",
    "requests==2.32.3",
    "openai>=2.7.2",
    "pyyaml==6.0.2",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]